# TicTacToe

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.sh  clean.sh  configure.bat  configure.sh  test.bat  test.sh
.github/workflows/: static.yml
public/: game.js  index.html  style.css  ui.js
src/: Board.hpp  CMakeLists.txt  CTicTacToe.cpp  CTicTacToe.h  Engine.hpp  Game.hpp  Player.hpp  TicTacToe.cpp  rand.hpp
